  (Pierre, Tony)
- Fixed bug #39215 (Inappropriate close of stdin/stdout/stderr). (Wez,Ilia)
- Fixed bug #39151 (Parse error in recursiveiteratoriterator.php). (Marcus)
- Fixed bug #39121 (Incorrect return array handling in non-wsdl soap client).
  (Dmitry)
- Fixed bug #39090 (DirectoryFilterDots doxygen docs and example is wrong).
  (Marcus)
- Fixed bug #38698 (for some keys cdbmake creates corrupted db and cdb can't 
  read valid db). (Marcus)
- Fixed bug #38680 (Added missing handling of basic types in json_decode).
  (Ilia) 
- Fixed bug #38602 (header( "HTTP/1.0 ..." ) does not change proto version).
  (Ilia)
- Fixed bug #38536 (SOAP returns an array of values instead of an object).
  (Dmitry)
- Fixed bug #38456 (Apache2 segfaults when virtual() is called in .php
  ErrorDocument). (Ilia)
- Fixed bug #37773 (iconv_substr() gives "Unknown error" when string length = 1").
  (Ilia)
- Fixed bug #36975 (natcasesort() causes array_pop() to misbehave). (Hannes)
- Fixed bug #36812 (pg_execute() modifies input array). (Ilia)
- Fixed bug #36644 (possible crash in variant_date_from_timestamp()). (Ilia)
- Fixed bug #33282 (Re-assignment by reference does not clear the is_ref flag)
  (Ilia,Dmitry, Matt Wilmas)

02 Nov 2006, PHP 5.2.0
- Updated bundled OpenSSL to version 0.9.8d in the Windows distro. (Edin)
- Updated Postgresql client libraries to 8.1.4 in the Windows distro. (Edin)
- Updated PCRE to version 6.7. (Ilia)
- Updated libsqlite in ext/pdo_sqlite to 3.3.7. (Ilia)
- Updated bundled MySQL client library to version 5.0.22 in the Windows 
  distribution. (Edin)
- Updated timezonedb to version 2006.7. (Derick)

- Added ability to make SOAP call userspace PHP<->XML converters. (Dmitry)
- Added support for character sets in pg_escape_string() for PostgreSQL 8.1.4 
  and higher. (Ilia)
- Added support for character sets in PDO quote() method for PostgreSQL 8.1.4 
  and higher. (Ilia)
- Added DSA key generation support to openssl_pkey_new(), FR #38731 (marci